# poe-alt-gem-appraisal

./: .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/api/: main.py
client/: Dockerfile  next.config.js  package-lock.json  package.json
client/components/: layout.js  navbar.js
client/pages/: _app.js  alt-gems.js  index.js
client/styles/: global.scss  variables.scss
src/poe_alt_gem_appraisal/: auth.py  exception.py  scope.py
src/poe_alt_gem_appraisal/tests/unit/: test_auth.py
