[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["aj45gh <alexjames12345@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core==1.4.2"]
build-backend = "poetry.core.masonry.api"
